Fix height of whitespace div

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -128,7 +128,7 @@ img {
 
 .whitespace {
   display: table;
-  height: 50%;
+  height: 40%;
   width: 100%;
 }
 
